@startuml

class Being

class Creature {

    int health
    int attack
    int defense
    String name

    speakTo()
    listen()
    attack()
}

class dawa{
    catchspear()
    big()
    tread()
    icebreak()
}

class monster{
    freeze()
    big()
    runaway()
    throwspear()
}

Creature --|> Being


dawa  --|> Creature

monster --|> Creature


@enduml